finish blog page